--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <a class="navbar-brand">LIVES</a>
 
           <ul>
-            <select id="selectOrden" class="form-select form-select-sm" aria-label=".form-select-sm example">
+            <select id="selectOrder" class="form-select form-select-sm" aria-label=".form-select-sm example">
               <option selected>Ordenar por:</option>
-              <option value="1">Mayor a menor</option>
-              <option value="2">Menor a mayor</option>
+              <option value="1">Precio descendente</option>
+              <option value="2">Precio ascendente</option>
               <option value="3">Alfabeticamente</option>
             </select>
           </ul>
