--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand">LIVES</a>
-
           <ul>
             <select id="selectOrder" class="form-select form-select-sm" aria-label=".form-select-sm example">
               <option selected>Ordenar por:</option>
@@ -34,11 +33,12 @@
               <option value="3">Alfabeticamente</option>
             </select>
           </ul>
-
-          <form class="d-flex" role="search">
+          <ul class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          </ul>
+          <ul>
+            <button id="paymentBtn" data-bs-toggle="modal" data-bs-target="#idModalCarrito" class="btn btn-outline-success">PAGAR</button>
+          </ul>
         </div>
     </nav>
 
@@ -46,8 +46,32 @@
         <div id="validZonesCards" class="row">
         </div>
     </div>
+
+      <!--Modal Carrito-->
+    <div class="modal fade" id="idModalCarrito" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Carrito de Compras</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="modal-bodyCarrito">
+            
+          </div>
+          <div class="row ml-ato">
+            <p id="totalPrice"></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="botonFinalizarCompra">Finalizar Compra</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- Own scripts -->
     <script src="./js_files/constructor.js"></script>
     <script src="./js_files/main.js"></script>
 </body>
