--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <section class="container-fluid">
-        <div class="row">
-          <div class="col-12">
+    <section>
+          <div>
             <img src="./images/banner_unificated.svg" alt="Banner Lives" class="img-fluid w-100">
           </div>
           <div class="text-center col-12 p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
             <h2 >Calculadora de precios de sesion de depilación definitiva</h2>
           </div>
-        </div>
     </section>
 
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
@@ -37,6 +35,9 @@
             <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           </ul>
           <ul>
+            <button id="showComboBtn" data-bs-toggle="modal" data-bs-target="#idModalCombos" class="btn btn-outline-primary">COMBOS</button>
+          </ul>
+          <ul>
             <button id="paymentBtn" data-bs-toggle="modal" data-bs-target="#idModalCarrito" class="btn btn-outline-success">PAGAR</button>
           </ul>
         </div>
@@ -51,7 +52,7 @@
     </h2>
 
 
-      <!--Modal Carrito-->
+    <!--Modal Carrito-->
     <div class="modal fade" id="idModalCarrito" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -68,6 +69,27 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             <button type="button" data-bs-dismiss="modal" class="btn btn-success" id="botonFinalizarCompra">Finalizar Compra</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Modal Combos-->
+    <div class="modal fade" id="idModalCombos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Carrito de Combos</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="modal-bodyCombo">
+            
+          </div>
+          <div class="row ml-ato">
+            <p id="totalPrice"></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
           </div>
         </div>
       </div>
