--- a/index.html
+++ b/index.html
@@ -84,10 +84,6 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body" id="modal-bodyCombo">
-            
-          </div>
-          <div class="row ml-ato">
-            <p id="totalPrice"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
@@ -102,6 +98,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--Toastify-->   
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--Sweet alert-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Own scripts -->
     <script src="./js_files/constructor.js"></script>
     <script src="./js_files/main.js"></script>
